--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passport-jwt",
+  "name": "passport-jwt-promise",
   "version": "4.0.0",
   "description": "Passport authentication strategy using JSON Web Tokens",
   "main": "./lib",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mikenicholson/passport-jwt.git"
+    "url": "https://github.com/tomkelsey/passport-jwt.git"
   },
   "keywords": [
     "Passport",
@@ -22,9 +22,9 @@
   "author": "Mike Nicholson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mikenicholson/passport-jwt/issues"
+    "url": "https://github.com/tomkelsey/passport-jwt/issues"
   },
-  "homepage": "https://github.com/mikenicholson/passport-jwt",
+  "homepage": "https://github.com/tomkelsey/passport-jwt",
   "devDependencies": {
     "chai": "^3.0.0",
     "chai-passport-strategy": "^1.0.0",
